--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -28,7 +28,7 @@
   border-radius: 0.5rem;
   color: var(--overlay-font-color);
   padding: 1rem;
-  margin: 2rem 0 4rem 0;
+  margin: 2rem 0 4rem;
 }
 
 .columns.dotw p {
