--- a/blocks/recent-items/recent-items.css
+++ b/blocks/recent-items/recent-items.css
@@ -1,3 +1,43 @@
 .sidebar .section.recent-items-container {
   grid-column: span 2;
 }
+
+.recent-items .card .product-title {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+
+.recent-items .card .product-rating {
+  display: flex;
+  padding-right: 5px;
+  max-width: 80px;
+  width: 100%;
+  align-items: center;
+}
+
+.recent-items .card .product-rating img {
+  max-width: 60px;
+  width: 100%;
+  padding-right: 5px;
+}
+
+.recent-items .card .product-rating div {
+  font-size: var(--body-font-size-xs);
+}
+
+.recent-items .card .product-rating div:before {
+  content: '(';
+}
+
+.recent-items .card .product-rating div:after {
+  content: ')';
+}
+
+.recent-items .card .options{
+  color: var(--text-color);
+  font-size: var(--body-font-size-s);
+  text-decoration: underline;
+}
