--- a/external-topic/blocks/columns/columns.css
+++ b/external-topic/blocks/columns/columns.css
@@ -60,7 +60,7 @@
   text-align: center;
   color: var(--link-color);
   background-color: unset;
-  margin: 0 0;
+  margin: 0;
   padding: 20px 0;
 }
 
